<resources>
    <string name="app_name">find cabin</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="intentKey_cabineId">cabine_id</string>


    <string name="search">search</string>
    <string name="s_cableId">Cable Id</string>
    <string name="copper">COPPER</string>
    <string name="fiber">FIBER</string>
    <string name="erase_all">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>

</resources>
